move paint splat container

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     </div>
     <img id="flagrant-logo" src="images/Flagrant_logo_white.svg" alt="Flagrant Logo">
   </nav>
-  <main data-controller="paint-splat"
-        data-paint-spalt-color-value="#FAE5E5"
-        data-paint-splat-transition-class="transition">
-    <div class="container">
+  <main>
+    <div class="container" data-controller="paint-splat"
+         data-paint-splat-color-value="#FAE5E5"
+         data-paint-splat-transition-class="transition">
       <h1>Enter Phone Number</h1>
       <input id="phone-input" type="tel" autofocus value="(123) 456-7890">
       <button data-action="paint-splat#trigger" class="submit">GO</button>
