copy to clipboard preview

--- a/public/result.html
+++ b/public/result.html
@@ -31,11 +31,7 @@
       <div class="result-group">
         <div class="container">
           <span>Embed the Num</span>
-          <span id="embed-preview">
-            &lta href=tel:"
-            <span data-parameters-target="embedPreview"></span>
-            "&gt&lt\a&gt
-          </span>
+          <span id="embed-preview">&lta href="tel:<span data-parameters-target="embedPreview"></span>"&gt&lt\a&gt</span>
           <a class="result-highlight" href="#" data-action="clipboard#copy">Copy html to clipboard</a>
         </div>
         <img src="images/embed.svg" class="result-icon" alt="webpage icon">
