--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css">
   <script src="bundle.js" async></script>
 </head>
@@ -16,16 +17,17 @@
   </nav>
   <main>
     <div class="container">
-      <h1>Enter Phone Number</ah1>
-      <form action="/result" data-controller="paint-splat"
-            data-paint-splat-transition-class="transition"
-            data-paint-splat-color-value="#FAE5E5">
+      <h1>Enter Phone Number</h1>
+      <form action="/result">
         <input id="phone-input" type="tel" autofocus placeholder="(123) 456-7890" 
                name="number" maxlength="15"
                data-controller="phone-input" data-action="phone-input#format"
                data-phone-input-number-value="">
-        <button class="submit" type="submit"
-                data-action="paint-splat#changePage">Go</button>
+        <a href="#" class="submit"
+          data-controller="paint-splat"
+          data-paint-splat-transition-class="transition"
+          data-paint-splat-color-value="#FAE5E5"
+          data-action="paint-splat#paintTransition">Go</a>
       </form>
     </div>
   </main>
