--- a/public/result.html
+++ b/public/result.html
@@ -16,9 +16,7 @@
     <img id="flagrant-logo" src="images/Flagrant_logo_red.svg" alt="Flagrant Logo">
   </nav>
   <main data-controller="parameters clipboard">
-    <div class="result-title">
-      <span  data-parameters-target="output"></span>
-    </div>
+    <h1 class="result-title" data-parameters-target="output"></h1>
     <div class="result-container">
       <div class="result-group">
         <img src="images/phone.svg" class="result-icon" id="phone-icon" alt="phone icon">
