more responsive css work

--- a/public/result.html
+++ b/public/result.html
@@ -19,7 +19,7 @@
     <h1 class="result-title" data-parameters-target="output"></h1>
     <div class="result-container">
       <div class="result-group">
-        <img src="images/phone.svg" class="result-icon" id="phone-icon" alt="phone icon">
+        <img src="images/phone.svg" class="icon" id="phone-icon" alt="phone icon">
         <div class="container">
           <span>Call the Num</span>
           <a class="result-highlight" href="#" 
@@ -33,7 +33,7 @@
           <span id="embed-preview">&lta href="tel:<span data-parameters-target="embedPreview"></span>"&gt&lt\a&gt</span>
           <a class="result-highlight" href="#" data-action="clipboard#copy">Copy html to clipboard</a>
         </div>
-        <img src="images/embed.svg" class="result-icon" alt="webpage icon">
+        <img src="images/embed.svg" class="icon" alt="webpage icon">
       </div>
     </div> 
     <div>
