add edit num functionality

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <form action="/result">
           <input id="phone-input" type="tel" autofocus placeholder="(123) 456-7890" 
                 name="number" maxlength="14" pattern="\([0-9]{3}\) [0-9]{3}-[0-9]{4}"
+                title="(123) 456-7890"
                 data-controller="phone-input" data-action="phone-input#format">
           <a href="#" class="submit"
             data-controller="paint-splat"
