--- a/public/result.html
+++ b/public/result.html
@@ -64,7 +64,7 @@
         <label for="pause">Encoded pause
           <input for="pause" type="number" placeholder="duration"
                  data-action="parameters#changePause"
-                 data-parameters-target="inputPause">second
+                 data-parameters-target="inputPause"> seconds
         </label>
       </div>
     </div>
